# ic-sign-in-with-email

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  dfx.json
.github/workflows/: backend.yaml  build_caches.yaml
canister/: CHANGELOG.md
canister/api/: Cargo.toml  can.did
canister/api/src/: lib.rs
canister/api/src/lifecycle/: init.rs  init_or_upgrade.rs
canister/api/src/queries/: get_delegation.rs  mod.rs
canister/api/src/updates/: generate_magic_link.rs  generate_verification_code.rs  mod.rs  submit_verification_code.rs
canister/impl/: Cargo.toml
canister/impl/src/: email_sender.rs  env.rs  hash.rs  lib.rs  rng.rs  state.rs  utils.rs
canister/impl/src/lifecycle/: init.rs  post_upgrade.rs  pre_upgrade.rs
canister/impl/src/model/: email_stats.rs  magic_links.rs  mod.rs  validated_email.rs  verification_codes.rs
canister/impl/src/queries/: get_delegation.rs  http_request.rs  mod.rs
canister/impl/src/updates/: generate_magic_link.rs  generate_verification_code.rs  mod.rs  submit_verification_code.rs
canister/utils/: Cargo.toml
email_sender/aws/: Cargo.toml
email_sender/aws/src/: lib.rs
email_sender/core/: Cargo.toml
email_sender/core/src/: lib.rs
integration_tests/: Cargo.toml
integration_tests/src/: client.rs  identity.rs  lib.rs  rng.rs  rsa.rs  tests.rs  utils.rs
libraries/magic_links/: Cargo.toml
libraries/magic_links/src/: lib.rs
libraries/test_utils/: Cargo.toml
libraries/test_utils/src/: lib.rs
libraries/utils/: Cargo.toml
libraries/utils/src/: lib.rs
rs/canister/: CHANGELOG.md
rs/canister/api/: Cargo.toml  can.did
rs/canister/api/src/: lib.rs
rs/canister/api/src/queries/: get_principal.rs  mod.rs
rs/canister/api/src/updates/: handle_magic_link.rs
rs/canister/impl/: Cargo.toml
rs/canister/impl/src/: email_sender.rs  env.rs  lib.rs  rng.rs  state.rs
rs/canister/impl/src/lifecycle/: init.rs  post_upgrade.rs
rs/canister/impl/src/queries/: get_delegation.rs  get_principal.rs  http_request.rs  mod.rs  rsa_public_key.rs
rs/canister/impl/src/updates/: generate_magic_link.rs  handle_magic_link.rs
rs/canister_upgrader/: Cargo.toml
rs/canister_upgrader/src/: lib.rs  main.rs
rs/email_sender/aws/: Cargo.toml
rs/email_sender/aws/gateway/: Cargo.toml
rs/email_sender/aws/gateway/src/: main.rs
rs/email_sender/aws/lambda/: Cargo.toml
rs/email_sender/aws/lambda/src/: main.rs
rs/email_sender/aws/src/: lib.rs
rs/email_sender/aws/template_updater/: Cargo.toml
rs/email_sender/aws/template_updater/src/: main.rs
rs/email_sender/core/: Cargo.toml
rs/email_sender/core/src/: lib.rs
rs/integration_tests/: .gitignore  Cargo.toml
rs/integration_tests/src/: lib.rs  rng.rs  setup.rs  tests.rs
rs/libraries/magic_links/: Cargo.toml
rs/libraries/magic_links/src/: lib.rs  main.rs
rs/libraries/test_utils/: Cargo.toml
rs/libraries/test_utils/src/: lib.rs
rs/libraries/utils/: Cargo.toml
rs/libraries/utils/src/: lib.rs
scripts/: build-aws-gateway-function.sh  build-aws-lambda-function.sh  build-aws-template-updater-function.sh  build-wasm.sh  docker-build-wasm.sh  run-integration-tests.sh  upgrade_canister.sh
