[workspace]
members = [
    "canister/api",
    "canister/impl",
    "email_sender/aws",
    "email_sender/core",
    "integration_tests"
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
async-trait = "0.1.79"
aws-sign-v4 = "0.3.0"
base64 = "0.22.0"
candid = "0.10.6"
canister_sig_util = { git = "https://github.com/dfinity/internet-identity", rev = "cdf3ffd7358d775e1da31183abe2b54383187579" }
getrandom = { version = "0.2.14", features = ["custom"] }
http = "1.1.0"
ic-agent = "0.34.0"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-certification = "2.5.0"
ic-stable-structures = "0.6.3"
pocket-ic = "2.1.0"
query-string-builder = "0.4.1"
rand = "0.8.5"
reqwest = "0.12.3"
ring = "0.17.8"
rmp-serde = "1.1.2"
rsa = "0.9.6"
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
sha2 = "0.10.8"
test-case = "3.3.1"
time = "0.3.36"

[patch.crates-io]
aws-sign-v4 = { git = "https://github.com/hpeebles/aws-sign-v4", rev = "932db2b573ce7a75d700baa1c8dc4c99c208923f" }