[workspace]
members = [
    "canister/api",
    "canister/impl",
    "email_sender/aws",
    "email_sender/core",
    "integration_tests",
    "libraries/magic_links",
    "libraries/utils",
]
resolver = "2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.79"
aws-sign-v4 = "0.3.0"
base64 = "0.22.0"
candid = "0.10.6"
canister_sig_util = { git = "https://github.com/dfinity/internet-identity", rev = "cdf3ffd7358d775e1da31183abe2b54383187579" }
clap = "4.5.4"
email_address = "0.2.4"
getrandom = { version = "0.2.14", features = ["custom"] }
hex = "0.4.3"
http = "1.1.0"
ic-agent = "0.34.0"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-certification = "2.5.0"
ic-http-certification = "2.5.0"
ic-stable-structures = "0.6.3"
pocket-ic = "2.1.0"
querystring = "1.1.0"
rand = "0.8.5"
reqwest = "0.12.3"
ring = "0.17.8"
rmp-serde = "1.1.2"
rsa = "0.9.6"
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
sha2 = "0.10.8"
test-case = "3.3.1"
time = "0.3.36"

[patch.crates-io]
aws-sign-v4 = { git = "https://github.com/hpeebles/aws-sign-v4", rev = "33b65dfde0676544a23c41608da77bd0a117d9ce" }
