[workspace]
members = [
    "rs/canister/api",
    "rs/canister/impl",
    "rs/canister_upgrader",
    "rs/email_sender/aws",
    "rs/email_sender/aws/gateway",
    "rs/email_sender/aws/lambda",
    "rs/email_sender/aws/template_updater",
    "rs/email_sender/core",
    "rs/integration_tests",
    "rs/libraries/magic_links",
    "rs/libraries/test_utils",
    "rs/libraries/utils",
]
resolver = "2"

[workspace.package]
version = "0.7.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
aes-gcm = "0.10.3"
async-trait = "0.1.79"
aws-config = "1.3.0"
aws_lambda_events = { version = "0.15.0", default-features = false }
aws-sdk-sesv2 = "1.23.0"
aws-sdk-sns = "1.23.0"
aws-sign-v4 = "0.3.0"
base64 = "0.22.0"
candid = "0.10.6"
canister_sig_util = { git = "https://github.com/dfinity/internet-identity", rev = "cdf3ffd7358d775e1da31183abe2b54383187579" }
clap = "4.5.4"
email_address = "0.2.4"
getrandom = { version = "0.2.14", features = ["custom"] }
hex = "0.4.3"
http = "1.1.0"
ic-agent = "0.33.0"
ic-cdk = "0.13.2"
ic-cdk-timers = "0.7.0"
ic-certification = "2.5.0"
ic-http-certification = "2.5.0"
ic_principal = "0.1.1"
ic-stable-structures = "0.6.3"
ic-utils = "0.33.0"
lambda_runtime = "0.11.1"
pocket-ic = "2.1.0"
querystring = "1.1.0"
rand = "0.8.5"
rand_core = "0.6.4"
reqwest = "0.12.3"
ring = "0.16.20"
rmp-serde = "1.1.2"
rsa = "0.9.6"
serde = "1.0.197"
serde_bytes = "0.11.14"
serde_json = "1.0.115"
serde_urlencoded = "0.7.1"
serde_with = "3.7.0"
sha2 = "0.10.8"
slog = "2.7.0"
test-case = "3.3.1"
time = "0.3.36"
tokio = "1.37.0"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[patch.crates-io]
aws-sign-v4 = { git = "https://github.com/hpeebles/aws-sign-v4", rev = "33b65dfde0676544a23c41608da77bd0a117d9ce" }
