[package]
name = "integration_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
candid.workspace = true
ic-agent.workspace = true
ic-http-certification.workspace = true
magic_links.path = "../libraries/magic_links"
pocket-ic.workspace = true
rand.workspace = true
ring.workspace = true
rsa.workspace = true
serde.workspace = true
sign_in_with_email_canister.path = "../canister/api"
sign_in_with_email_canister_utils.path = "../canister/utils"
test-case.workspace = true
