[package]
name = "sign_in_with_email_canister_impl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-stable-structures.workspace = true
rmp-serde.workspace = true
serde.workspace = true
sign_in_with_email_canister.path = "../api"