[package]
name = "sign_in_with_email_canister_impl"
version = "0.1.0"
edition = "2021"

[lib]
path = "src/lib.rs"
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
candid.workspace = true
canister_sig_util.workspace = true
email_sender_aws = { path = "../../email_sender/aws", optional = true }
email_sender_core.path = "../../email_sender/core"
getrandom.workspace = true
ic-cdk.workspace = true
ic-cdk-timers.workspace = true
ic-certification.workspace = true
ic-stable-structures.workspace = true
rand.workspace = true
rmp-serde.workspace = true
rsa = { workspace = true, features = ["serde"] }
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sign_in_with_email_canister.path = "../api"

[features]
aws = ["email_sender_aws"]