[package]
name = "email_sender_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
email_sender_core.path = "../core"
ic-cdk.workspace = true
ic-cdk.features = ["transform-closure"]
serde.workspace = true
serde_json.workspace = true
query-string-builder.workspace = true
