[package]
name = "email_sender_aws"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
aws-sign-v4.workspace = true
chrono = "0.4.37"
email_sender_core.path = "../core"
ic-cdk.workspace = true
ic-cdk.features = ["transform-closure"]
reqwest = "0.12.3"
serde.workspace = true
serde_json.workspace = true
query-string-builder.workspace = true
