[package]
name = "magic_links"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm.workspace = true
hex.workspace = true
rand.workspace = true
rsa = { workspace = true, features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sign_in_with_email_canister.path = "../../canister/api"
