[package]
name = "utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
email_address.workspace = true
magic_links.path = "../magic_links"
rsa.workspace = true
serde.workspace = true
serde_bytes.workspace = true
sha2.workspace = true
sign_in_with_email_canister.path = "../../canister/api"