[package]
name = "sign_in_with_email_canister"
version = "0.4.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64.workspace = true
candid.workspace = true
rand_core.workspace = true
rsa.workspace = true
serde.workspace = true
serde_bytes.workspace = true
