[package]
name = "email_sender_aws"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait.workspace = true
aws-sign-v4.workspace = true
candid.workspace = true
email_sender_core.path = "../core"
http.workspace = true
ic-cdk.workspace = true
ic_principal.workspace = true
magic_links.path = "../../libraries/magic_links"
serde_json.workspace = true
serde_urlencoded.workspace = true
time = { workspace = true, features = ["formatting", "macros"] }
