[package]
name = "magic_links"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aes-gcm.workspace = true
clap = { workspace = true, features = ["derive"] }
hex.workspace = true
ic_principal.workspace = true
rand.workspace = true
rsa = { workspace = true, features = ["sha2"] }
serde.workspace = true
serde_json.workspace = true
serde_with = { workspace = true, features = ["hex"] }
sign_in_with_email_canister.path = "../../canister/api"
utils.path = "../utils"
